--- a/src/index.css
+++ b/src/index.css
@@ -1,68 +1,179 @@
+@import "tailwindcss";
+@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
+
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  --primary: #00aaff; 
+  --bg-base: #121212;
+  --bg-secondary: #1c1c1c;
+  --bg-accent: #2a2a2e;
+  --text-color: #ffffff;
+  --text-muted: #9ca3af;
+  --border-color: #374151;
+  --color-white: #ffffff;
+  --color-success: #33c648;
+  --color-danger: #fc605b;
+  --color-warning: #ffbb55;
+  --transition: all 0.4s ease-out 0s;
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
-body {
+*{
   margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
+  padding: 0;
+  box-sizing: border-box;
+  border: none;
+  outline: none;
+}
+
+body,html{
+  font-family: "Roboto", serif;
+  height: 100%;
   min-height: 100vh;
+  scrollbar-width: thin;
+  scrollbar-color: var(--primary) transparent;
+  scroll-behavior: smooth;
+  color: var(--text-color);
+  background-color: var(--bg-base);
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+::-webkit-scrollbar {
+  display: none;
 }
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
+a{
+  color: var(--text-color);
+  text-decoration: none;
+}
+
+p{
+  font-size: 16px;
+  line-height: 25px;
+}
+
+section{
+  overflow: hidden;
+}
+
+button{
+  background:transparent;
+  font-size: 16px;
+} 
+
+img{
+  width: 100%;
+  height: 100%;
+  min-height: 100%;
+  object-fit: cover;
+  display: none;
+}
+
+.text-primary{
+  color: var(--primary);
+}
+
+.blue{
+  -webkit-backdrop-filter: blur(50px);
+  backdrop-filter: blur(50px);
+}
+
+.btn{
+  padding: 15px 25px;
+  font-size: 16px;
   cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+  border-radius: 51px;
+  background: var(--bg-accent);
+  transition: var(--transition);
+  display: inline-block;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
+.btn.primary{
+  background:var(--primary);
+  color: var(--border-white);
+}
+
+.btn:hover{
+  transform: translateY(2px);
+}
+
+.container{
+  min-width: 1200px;
+  padding: 70px 20px;
+  margin: auto;
+}
+
+.section-header{
+  max-width: 700px;
+  margin: auto;
+  text-align: center;
+}
+
+.section-header h3{
+  font-size: 20px;
+  margin: 10px 0px;
+  font-weight: 500;
+  color: var(--primary);
+}
+
+.section-header h2{
+  font-size: 34px;
+  margin: auto;
+  font-weight:500;
+}
+
+.line-clamp-2,
+.line-clamp-3{
+  display: -webkit-box;
+ -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.line-clamp-2{
+  line-clamp: 2;
+  -webkit-line-clamp: 2;
+}
+
+.line-clamp-3{
+  line-clamp: 3;
+  -webkit-line-clamp: 3;
+}
+
+.icon{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.spotlight{
+  position: absolute;
+  width: 322px;
+  height: 308px;
+  background: var(--primary);
+  background: linear-gradient(190deg, var(--primary) 0%, transparent 100%);
+  border-radius: 50%;
+  -webkit-filter: blur(50px);
+ filter: blur(50px);
+  z-index: 1;
+}
+
+
+@media screen and (max-width: 700px){
+  .section-header h2{
+    font-size: 25px;
   }
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
