init video and contact

--- a/app/globals.css
+++ b/app/globals.css
@@ -191,3 +191,14 @@ html {
 .scrollbar-hide::-webkit-scrollbar {
   display: none;
 }
+
+
+
+@layer base {
+  * {
+    @apply border-border outline-ring/50;
+  }
+  body {
+    @apply bg-background text-foreground;
+  }
+}
